--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,229 +1,125 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
+  background-image: linear-gradient(130deg, #ecf4d6, #f5fae9);
   min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
+.navbar {
+  background-color: #9ad0c2;
   position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+  width: 100wv;
+  height: 84px;
+  border-bottom: #265073 2px solid;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
+.burgerLine {
   position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+  width: 100%;
+  height: 4px;
+  background-color: #265073;
+  border-radius: 2px;
+}
+.Line1 {
+  top: 6px;
+}
+.Line2 {
+  top: 16px;
+}
+.Line3 {
+  top: 26px;
 }
 
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.burgerMenu {
+  position: absolute;
+  width: 40px;
+  height: 26px;
+  margin-top: 24px;
+  margin-left: 15px;
+  transition: 0.2s ease-in-out;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.burgerMenu:hover {
+  width: 50px;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+.heading {
+  margin-top: 50px;
+  margin-bottom: 25px;
+  margin-left: auto;
+  text-align: center;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.menu {
+  background-color: #9ad0c2;
+  position: absolute;
+  top: 86px;
+  width: max-content;
+  height: auto;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: 15px;
+  border-bottom: #265073 2px solid;
+  border-right: #265073 2px solid;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.link {
+  display: block;
+  font-size: x-large;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  text-decoration: none;
+  font-weight: bold;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.link:hover {
+  color: #2d9596;
+}
+
+.hidden {
+  display: none;
+}
+
+.postPreview {
+  padding: 20px;
+  margin-top: 30px;
+  border: #265073 solid 2px;
+  border-radius: 8px;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.postTitle {
+  margin-bottom: 10px;
+  border-bottom: #265073 solid 2px;
+}
+
+.postParagraph {
+  margin-bottom: 8px;
+}
+
+.postLink {
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.postLink:hover {
+  color: #2d9596;
+}
+
+.mainParagraph {
+  max-width: 75vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.linkContainer {
+  display: grid;
+  grid-template-columns: 1;
+  row-gap: 20px;
+  max-width: 50vw;
+  margin-left: auto;
+  margin-right: auto;
 }
