change background color

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,5 @@
 .main {
-  background-image: linear-gradient(130deg, #ecf4d6, #f5fae9);
+  background-image: linear-gradient(130deg, #fcfff3);
   min-height: 100vh;
 }
 
