--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -70,7 +70,6 @@
   margin-left: 20px;
   margin-right: 20px;
   text-decoration: none;
-  font-weight: bold;
 }
 
 .link:hover {
@@ -122,4 +121,14 @@
   max-width: 50vw;
   margin-left: auto;
   margin-right: auto;
+}
+
+.title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  /* display: inline-block; */
+  font-size: xx-large;
 }
